@@ -172,15 +172,23 @@ public class OrganizationUserManagementRESTService {
         propertyMap.put(propertyArray[i], userEntityProperty == null ? null : userEntityProperty.getValue());
       }
       boolean hasImage = userEntityFileController.hasProfilePicture(userEntity);        
+      
+      UserSchoolDataIdentifier staffMemberUSDI = userSchoolDataIdentifierController.findUserSchoolDataIdentifierBySchoolDataIdentifier(staffMemberIdentifier);
+      
+      Set<String> roles = new HashSet<>();
+      if (staffMemberUSDI != null && staffMemberUSDI.getRoles() != null) {
+        staffMemberUSDI.getRoles().forEach(roleEntity -> roles.add(roleEntity.getArchetype().name()));
+      }
+      
       staffMembers.add(new fi.otavanopisto.muikku.rest.model.StaffMember(
           staffMemberIdentifier.toId(),
-          new Long((Integer) o.get("userEntityId")),
+          Long.valueOf((Integer) o.get("userEntityId")),
           (String) o.get("firstName"),
           (String) o.get("lastName"), 
           email,
           propertyMap,
           organizationRESTModel,
-          (String) o.get("archetype"),
+          roles,
           hasImage));
     }
       
@@ -306,8 +314,8 @@ public class OrganizationUserManagementRESTService {
             (String) o.get("curriculumIdentifier"),
             userEntity.getUpdatedByStudent(),
             userEntity.getId(),
-            null, // flags
-            organizationRESTModel));
+            organizationRESTModel,
+            false));
       }
     }
     
